--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,11 +15,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".demo.BlurDemoActivity" />
-        <activity android:name=".demo.AListViewDemoActivity" />
-        <activity android:name=".demo.bitmap_cache.BitmapCacheDemoActivity" />
-        <activity android:name=".demo.AWaveLayoutActivity" />
-        <activity android:name=".demo.adynamic_fragment.ADynamicFragmentActivity"></activity>
+        <activity android:name=".demo.effect.BlurDemoActivity" />
+        <activity android:name=".demo.views.AListViewDemoActivity" />
+        <activity android:name=".demo.fromwork.bitmap_cache.BitmapCacheDemoActivity" />
+        <activity android:name=".demo.views.AWaveLayoutActivity" />
+        <activity android:name=".demo.views.adynamic_fragment.ADynamicFragmentActivity" />
+        <activity android:name=".demo.views.ATimeIconViewActivity"></activity>
     </application>
 
 </manifest>
